# BlockchainAssignment

./: .gitignore  README.md
hardhat_test/: package-lock.json  package.json
hardhat_test/contracts/: AssignmentToken.sol
hardhat_test/test/: AssignmentToken.test.js
token_dapp/: package-lock.json  package.json
token_dapp/src/: App.js  CustomTokenABI.json
token_dapp/src/component/: Admin.jsx  Mint.jsx  User.jsx
wallet/: Cargo.toml  wallet.json
wallet/src/: main.rs
