[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
secp256k1 = { version = "0.30.0", features = ["rand","hashes"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.139"
hashes = "0.1"
clap = { version = "4.5.31", features = ["derive"] }
